packages/uow-core/main/default/objects/UoWObjectSetting__mdt/UoWObjectSetting__mdt.object-meta.xml
<CustomObject>
    <description>Object-specific settings for Unit of Work operations including audit, risk, and masking configuration</description>
    <label>UoW Object Setting</label>
    <pluralLabel>UoW Object Settings</pluralLabel>
</CustomObject>