packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/AuditSampleSize__c.field-meta.xml
<CustomField>
    <fullName>AuditSampleSize__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Number of records to capture in audit snapshot</description>
    <inlineHelpText>Maximum number of records to include in audit snapshot. Default: 5. Increase for more detail, decrease for large operations.</inlineHelpText>
    <label>Audit Sample Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>