packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/AuditSampleStrategy__c.field-meta.xml
<CustomField>
    <fullName>AuditSampleStrategy__c</fullName>
    <description>Strategy for selecting which records to include in snapshot</description>
    <inlineHelpText>FIRST_N = first records, LAST_N = last records, RANDOM = random sampling, NONE = no record capture (disables snapshots and record-index reverse lookup for this object). Default: FIRST_N</inlineHelpText>
    <label>Audit Sample Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIRST_N</fullName>
                <default>true</default>
                <label>First N Records</label>
            </value>
            <value>
                <fullName>LAST_N</fullName>
                <label>Last N Records</label>
            </value>
            <value>
                <fullName>RANDOM</fullName>
                <label>Random Sampling</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <label>None (no record capture)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>