packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/BaseRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>BaseRiskWeight__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>Base risk weight for this object type (0.0 - 1.0 scale)</description>
    <inlineHelpText>Base risk weight applied to all operations on this object. Scale: 0.0 (no risk) to 1.0 (critical risk). Default: 0.5</inlineHelpText>
    <label>Base Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>