packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>Parent UoW Configuration</description>
    <inlineHelpText>Links this object setting to a parent UoW Configuration</inlineHelpText>
    <label>Configuration</label>
    <referenceTo>UoWConfiguration__mdt</referenceTo>
    <relationshipLabel>Object Settings</relationshipLabel>
    <relationshipName>ObjectSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>