packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/DeleteRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>DeleteRiskWeight__c</fullName>
    <description>Risk weight multiplier for DELETE operations (overrides base weight if specified)</description>
    <inlineHelpText>Optional: Specific risk weight for DELETE operations. If blank, uses Base Risk Weight. Scale: 0.0-1.0</inlineHelpText>
    <label>Delete Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>