packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/DmlStrategyClassName__c.field-meta.xml
<CustomField>
    <fullName>DmlStrategyClassName__c</fullName>
    <description>A specific DML strategy that applies to this SObject</description>
    <inlineHelpText>A specific DML strategy that applies to this SObject</inlineHelpText>
    <label>DML Strategy Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>