packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/InsertRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>InsertRiskWeight__c</fullName>
    <description>Risk weight multiplier for INSERT operations (overrides base weight if specified)</description>
    <inlineHelpText>Optional: Specific risk weight for INSERT operations. If blank, uses Base Risk Weight. Scale: 0.0-1.0</inlineHelpText>
    <label>Insert Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>