packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskLevel__c</fullName>
    <description>Categorical risk level for this object type</description>
    <inlineHelpText>Categorical risk classification. Used with Risk Weight to assess transaction risk. HIGH/CRITICAL objects may require approval.</inlineHelpText>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>