packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/UndeleteRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>UndeleteRiskWeight__c</fullName>
    <description>Risk weight multiplier for UNDELETE operations (overrides base weight if specified)</description>
    <inlineHelpText>Optional: Specific risk weight for UNDELETE operations. If blank, uses Base Risk Weight. Scale: 0.0-1.0</inlineHelpText>
    <label>Undelete Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>