packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/UpdateRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>UpdateRiskWeight__c</fullName>
    <description>Risk weight multiplier for UPDATE operations (overrides base weight if specified)</description>
    <inlineHelpText>Optional: Specific risk weight for UPDATE operations. If blank, uses Base Risk Weight. Scale: 0.0-1.0</inlineHelpText>
    <label>Update Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>