packages/uow-core/main/default/objects/UoWObjectSetting__mdt/fields/UpsertRiskWeight__c.field-meta.xml
<CustomField>
    <fullName>UpsertRiskWeight__c</fullName>
    <description>Risk weight multiplier for UPSERT operations (overrides base weight if specified)</description>
    <inlineHelpText>Optional: Specific risk weight for UPSERT operations. If blank, uses Base Risk Weight. Scale: 0.0-1.0</inlineHelpText>
    <label>Upsert Risk Weight</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>