packages/uow-core/main/default/objects/UoWObjectSetting__mdt/listViews/AllObjectSettings.listView-meta.xml
<ListView>
    <fullName>AllObjectSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Configuration__c</columns>
    <columns>SObjectType__c</columns>
    <columns>DmlStrategyClassName__c</columns>
    <columns>RiskLevel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>